add images to html

--- a/index.html
+++ b/index.html
@@ -2,4 +2,9 @@
   <head>
   <link rel="stylesheet" type="text/css" href="jenkinsTheme.css">
   </head>
+  <body>
+    <img src="ouroboros-small.png" />
+    <img src="ouroboros-medium.png" />
+    <img src="ouroboros-large.png" />
+  </body>
 </html>
