--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <img src="ouroboros-small.png" />
     <img src="ouroboros-medium.png" />
     <img src="ouroboros-large.png" />
+    
+    <div id="jenkins-head-icon" />
+    <div id="main-panel" />
   </body>
 </html>
