--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <html>
+<html>
   <head>
   <link rel="stylesheet" type="text/css" href="jenkinsTheme.css">
   </head>
@@ -11,4 +11,3 @@
     <div id="main-panel" />
   </body>
 </html>
--->
